UtahLiveDataTest/src/objects/ApplicationLocation__c.object
<CustomObject>
    <description>Stores all the locations related to an Application</description>
    <fields>
        <fullName>ApplicationDetail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Detail</label>
        <referenceTo>Form__c</referenceTo>
        <relationshipLabel>Application Locations</relationshipLabel>
        <relationshipName>Application_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Application Locations</relationshipLabel>
        <relationshipName>Application_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreApplication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre-Application</label>
        <referenceTo>PreApplication__c</referenceTo>
        <relationshipLabel>Application Locations</relationshipLabel>
        <relationshipName>Application_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Application Location</label>
    <nameField>
        <displayFormat>AL-{00000}</displayFormat>
        <label>Application Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>